--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -23,7 +23,10 @@
   <!-- The div where we will inject our map -->
   <div id="map"></div>
 
-  <!-- Our JS -->
+    <!-- Our API_KEY -->
+  <script type="text/javascript" src="config.js"></script>
+
+    <!-- Our JS -->
   <script type="text/javascript" src="logic.js"></script>
 </body>
 </html>
